...
          }
        } header: {
          Text(section.name).textCase(.none)
        }
      }
      .toolbar {
        NavigationLink("Configure") {
          ConfigurationView(configuration: configuration)
        }
      }
    }
  }

...
