...
      }
      .listStyle(GroupedListStyle())
      .toolbar {
        Button("Select All") {
          selectedOptions.formUnion(options)
        }
        Button("Deselect All") {
          selectedOptions = Set<Option>()
        }
      }
    }

    private func toggleSelection(option: Option) {
...
